--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <button type="submit" class="button-subs">
               Subscribe
               <svg width="24" height="24" fill="white" class="icon-subs">
-                <use href="./images/icons.svg#send"></use>
+                <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
           </form>
@@ -577,7 +577,6 @@
               class="visually-hidden"
               value="true"
             />
-
             <label class="label-checkbox" for="user-privacy">
               <span class="checkbox-view" id="one">
                 <svg class="checkbox-icon" height="8" width="10">
