--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -496,21 +496,20 @@
           </ul>
         </div>
         <!-- Subscribe -->
-        <div class="footer-third">
-          <p class="footer-links-sign-two">Subscribe</p>
+        <div class="subscribe-container">
+          <p class="subscribe-link">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-label" for="subscribe">
+            <label class="subscribe-label">
               <input
-                id="subscribe"
-                class="footer-input"
+                class="subscribe-input"
                 type="email"
                 placeholder="E-mail"
                 name="subscribe"
               />
             </label>
-            <button type="submit" class="button-subs">
+            <button type="submit" class="subscribe-button">
               Subscribe
-              <svg width="24" height="24" fill="white" class="icon-subs">
+              <svg width="24" height="24" fill="white" class="subscribe-icon">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </button>
@@ -521,15 +520,14 @@
     <!-- Modal -->
     <div class="backdrop">
       <div class="modal">
-        <button type="button" class="close-button">
           <svg class="close-butt-icon" width="8" height="8">
-            <use href="./images/icons.svg#close"></use>
-          </svg>
+            <use href="./images/icons.svg#icon-close-black"></use>
+            <button type="button" class="icon-close-black">
         </button>
         <p class="form-header">Leave your contacts and we will call you back</p>
         <form>
           <div class="forminput-div">
-            <label class="form-label" for="user-name"> Name </label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="icon-input-group">
               <input
                 class="form-input"
@@ -538,30 +536,30 @@
                 id="user-name"
               />
               <svg width="18" height="24" class="input-icon">
-                <use href="./images/icons.svg#name"></use>
+                <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <div class="forminput-div">
-            <label class="form-label" for="phone"> Phone </label>
+            <label class="form-label" for="phone">Phone</label>
             <div class="icon-input-group">
               <input class="form-input" name="phone" type="tel" id="phone" />
               <svg width="18" height="24" class="input-icon">
-                <use href="./images/icons.svg#phone"></use>
+                <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
           <div class="forminput-div">
-            <label class="form-label" for="email"> Email </label>
+            <label class="form-label" for="email">Email</label>
             <div class="icon-input-group">
               <input class="form-input" name="email" type="email" id="email" />
               <svg width="18" height="24" class="input-icon">
-                <use href="./images/icons.svg#email"></use>
+                <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
           <div class="formcomment-div">
-            <label class="form-label" for="user-comment"> Comment </label>
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
               name="user-comment"
