--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -499,12 +499,13 @@ u<!DOCTYPE html>
         <div class="subscribe-container">
           <p class="subscribe-link">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-label">
+            <label class="subscribe-label" for="user-mail">
               <input
                 class="subscribe-input"
                 type="email"
                 placeholder="E-mail"
                 name="subscribe"
+                id="user-mail"
               />
             </label>
             <button type="submit" class="subscribe-button">
@@ -518,15 +519,13 @@ u<!DOCTYPE html>
       </div>
     </footer>
     <!-- Modal -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
-          <svg class="close-butt-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black"></use>
-            <button type="button" class="icon-close-black">
-        </button>
-        <p class="form-header">Leave your contacts and we will call you back</p>
+        <button type="submit" class="modal-close-button"><svg class="close-button-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use></button>                      
+        <p class="form-title">Leave your contacts and we will call you back</p>
         <form>
-          <div class="forminput-div">
+          <div class="form-input-container">
             <label class="form-label" for="user-name">Name</label>
             <div class="icon-input-group">
               <input
@@ -534,51 +533,46 @@ u<!DOCTYPE html>
                 name="user-name"
                 type="text"
                 id="user-name"
+                required
               />
               <svg width="18" height="24" class="input-icon">
-                <use href="./images/icons.svg#icon-person-black"></use>
+                <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
-          <div class="forminput-div">
-            <label class="form-label" for="phone">Phone</label>
+          <div class="form-input-container">
+            <label class="form-label" for="user-phone">Phone</label>
             <div class="icon-input-group">
-              <input class="form-input" name="phone" type="tel" id="phone" />
+              <input class="form-input" name="phone" type="tel" id="user-phone" required />
               <svg width="18" height="24" class="input-icon">
-                <use href="./images/icons.svg#icon-phone-black"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
-          <div class="forminput-div">
-            <label class="form-label" for="email">Email</label>
+          <div class="form-input-container">
+            <label class="form-label" for="user-email">Email</label>
             <div class="icon-input-group">
-              <input class="form-input" name="email" type="email" id="email" />
+              <input class="form-input" name="email" type="email" id="user-email" required />
               <svg width="18" height="24" class="input-icon">
-                <use href="./images/icons.svg#icon-email-black"></use>
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="formcomment-div">
+          <div class="form-comment-container">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
               name="user-comment"
               placeholder="Text input"
               id="user-comment"
+              required
             ></textarea>
           </div>
-          <div class="div-form-checkbox">
-            <input
-              name="user-privacy"
-              type="checkbox"
-              id="user-privacy"
-              class="visually-hidden"
-              value="true"
-            />
-            <label class="label-checkbox" for="user-privacy">
+          <div class="form-checkbox">
+            <label class="label-checkbox" for="privacy-policy">
               <span class="checkbox-view" id="one">
                 <svg class="checkbox-icon" height="8" width="10">
-                  <use href="./images/icons.svg#checker"></use>
+                  <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;<a
@@ -587,8 +581,16 @@ u<!DOCTYPE html>
                 >Privacy Policy</a
               >
             </label>
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="privacy-policy"
+              class="visually-hidden"
+              value="true"
+              required
+            />            
           </div>
-          <button type="submit" class="order-button">Send</button>
+          <button type="submit" class="button-title">Send</button>
         </form>
       </div>
     </div>
