--- a/index.html
+++ b/index.html
@@ -521,8 +521,11 @@
     <!-- Modal -->
     <div class="backdrop is-open">
       <div class="modal">
-        <button type="submit" class="modal-close-button"><svg class="close-button-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use></button>                      
+        <button type="button" class="modal-close-button">
+          <svg class="close-button-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
         <form>
           <div class="form-input-container">
@@ -543,7 +546,13 @@
           <div class="form-input-container">
             <label class="form-label" for="user-phone">Phone</label>
             <div class="icon-input-group">
-              <input class="form-input" name="phone" type="tel" id="user-phone" required />
+              <input
+                class="form-input"
+                name="phone"
+                type="tel"
+                id="user-phone"
+                required
+              />
               <svg width="18" height="24" class="input-icon">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -552,7 +561,13 @@
           <div class="form-input-container">
             <label class="form-label" for="user-email">Email</label>
             <div class="icon-input-group">
-              <input class="form-input" name="email" type="email" id="user-email" required />
+              <input
+                class="form-input"
+                name="email"
+                type="email"
+                id="user-email"
+                required
+              />
               <svg width="18" height="24" class="input-icon">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -569,9 +584,17 @@
             ></textarea>
           </div>
           <div class="form-checkbox">
-            <label class="label-checkbox" for="privacy-policy">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              class="visually-hidden"
+              value="true"
+              required
+            />
+            <label class="label-checkbox" for="user-privacy">
               <span class="checkbox-view" id="one">
-                <svg class="checkbox-icon" height="8" width="10">
+                <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
@@ -581,14 +604,6 @@
                 >Privacy Policy</a
               >
             </label>
-            <input
-              type="checkbox"
-              name="user-privacy"
-              id="privacy-policy"
-              class="visually-hidden"
-              value="true"
-              required
-            />            
           </div>
           <button type="submit" class="button-title">Send</button>
         </form>
